Rotas e Swagger atualizados, e começando os controllers e services
